# s3-gui-free

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bucket.rs  download.rs  mod.rs  multipart.rs  object.rs  security.rs  upload.rs
src-tauri/src/s3/: client.rs  config.rs  mod.rs  types.rs
src/components/: FilePreview.tsx  UploadModal.tsx
src/pages/: BucketList.tsx  ConnectionManager.tsx  FileBrowser.tsx
src/services/: cache.ts  s3.ts  security.ts
src/store/: index.ts
src/types/: index.ts
